# RAG_from_scratch

./: .gitignore  README.md  pyproject.toml  rag_from_scratch_10_and_11.ipynb  rag_from_scratch_12_to_14.ipynb  rag_from_scratch_1_to_4.ipynb  rag_from_scratch_5_to_9.ipynb
